Add Id keyword, switch source tarball to tar.bz2
git-svn-id: file:///srv/repos/svn-packages/svn@106485 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-unstable/PKGBUILD
+++ b/kde-unstable/PKGBUILD
@@ -10,17 +10,17 @@ url=('http://www.libdmtx.org/')
 arch=('i686' 'x86_64')
 license=('GPL2')
 depends=('imagemagick')
-source=("http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz")
-md5sums=('e23705cd9bd40b9d7cf1e7c750c67ca5')
+source=("http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('0684cf3857591e777b57248d652444ae')
 options=('!libtool')
 
 build() {
-  cd ${srcdir}/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr
   make
 }
 
 package() {
-  cd ${srcdir}/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   make DESTDIR="${pkgdir}" install
 }
