--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: damir <damir@archlinux.org>
 
 pkgname=k3b
-pkgver=2.0.1
-pkgrel=3
+pkgver=2.0.2
+pkgrel=1
 depends=('kdebase-runtime' 'kdemultimedia-kioslave' 'libsamplerate' 'libmad'
          'ffmpeg' 'taglib' 'libmpcdec' 'libdvdread' 'cdrdao' 'cdrkit'
          'shared-mime-info' 'libxft')
@@ -20,15 +20,9 @@ optdepends=('dvd+rw-tools: for dvd burning support'
             'transcode:    for advanced mpeg conversion support'
             'emovix:       for bootable multimedia cd/dvd support')
 options=('!libtool')
-source=("http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.bz2"
-	'fix-crash-with-qt-4.7.0.patch')
-md5sums=('4e5b6665d91d4984cbfa814b797257cb'
-	'd4f0b447d8054eaa927f2bc65026cbf5')
+source=("http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
 
 build() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
-  patch -Np0 -i ${srcdir}/fix-crash-with-qt-4.7.0.patch
-
   cd "${srcdir}"
   mkdir build
   cd build
@@ -42,3 +36,4 @@ package() {
   cd ${srcdir}/build
   make DESTDIR=${pkgdir} install
 }
+md5sums=('c86113af31a2032e57fd2f302b5f637a')
