--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Federico Quagliata (quaqo) <quaqo@despammed.com>
 
 pkgname=cracklib
-pkgver=2.8.16
+pkgver=2.8.18
 pkgrel=1
 pkgdesc="Password Checking Library"
 arch=('i686' 'x86_64')
@@ -12,11 +12,12 @@ url="http://sourceforge.net/projects/cracklib"
 depends=('glibc' 'zlib')
 options=('!libtool')
 source=(http://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz)
+md5sums=('79053ad8bc714a44cd660cb12116211b')
 
 build() {
   cd $srcdir/$pkgname-$pkgver
   ./configure --prefix=/usr --without-python
-  make || return 1
+  make 
 }
 
 package() {
@@ -26,4 +27,3 @@ package() {
   sh ./util/cracklib-format dicts/cracklib-small \
     | sh ./util/cracklib-packer $pkgdir/usr/share/cracklib/pw_dict
 }
-md5sums=('3bfb22db8fcffd019463ee415a1b25b7')
