--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 #Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 
 pkgname=lablgtk2
-pkgver=2.14.1
+pkgver=2.14.2
 pkgrel=1
 pkgdesc=" An Objective Caml interface to gtk2"
 arch=(i686 x86_64)
@@ -10,18 +10,15 @@ license=('LGPL')
 url="http://wwwfun.kurims.kyoto-u.ac.jp/soft/olabl/lablgtk.html"
 depends=('gtk2' 'gtkspell' 'libgnomecanvas' 'librsvg' 'libgnomeui' 'gtksourceview' 'gtksourceview2')
 makedepends=('ocaml')
-source=(http://wwwfun.kurims.kyoto-u.ac.jp/soft/olabl/dist/lablgtk-$pkgver.tar.gz
-        ocaml-3.12.patch)
+source=(http://wwwfun.kurims.kyoto-u.ac.jp/soft/olabl/dist/lablgtk-$pkgver.tar.gz)
 options=(!makeflags)
 
 build() {
   cd $startdir/src/lablgtk-$pkgver
-  patch -Np0 -i ../ocaml-3.12.patch
   ./configure
   make world
   make opt
   make  PREFIX=$startdir/pkg/usr LIBDIR=$startdir/pkg/usr/lib/ocaml BINDIR=$startdir/pkg/usr/bin INSTALLDIR=$startdir/pkg/usr/lib/ocaml/lablgtk2 DLLDIR=$startdir/pkg/usr/lib/ocaml/stublibs install
 rm -r $startdir/pkg/usr/bin
 }
-md5sums=('bdf7e39d4be20f9f89c89eed865b05f8'
-         'f0bc53696655aae35e3a3ec8977fcd51')
+md5sums=('bad77680a72dab8b915cae99d1ec9b1f')
