--- a/gnome-blog/trunk/PKGBUILD
+++ b/gnome-blog/trunk/PKGBUILD
@@ -4,12 +4,16 @@
 
 pkgname=gnome-blog
 pkgver=0.9.2
-pkgrel=3
+pkgrel=4
 pkgdesc="A gnome application that allows you to post entries to many different blog formats."
 arch=('any')
 license=('GPL')
-depends=('gnome-python')
-makedepends=('pkgconfig' 'intltool' 'desktop-file-utils')
+depends=('python2-gconf' 'python2-libgnome')
+makedepends=('intltool' 'desktop-file-utils' 'gnome-python')
+optdepends=('python-gnomeapplet: GNOME panel applet'
+            'python-gdata: Blogger.com support'
+            'gnome-python-extras: Spell checker'
+            'gtkspell: Spell checker')
 install=gnome-blog.install
 url="http://www.gnome.org/~seth/gnome-blog/"
 source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/0.9/${pkgname}-${pkgver}.tar.bz2)
@@ -31,6 +35,6 @@ package() {
 
   install -dm755 "${pkgdir}/usr/share/gconf/schemas"
   gconf-merge-schema "${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas" \
-    --domain gnome-blog ${pkgdir}/etc/gconf/schemas/*.schema || return 1
+    --domain gnome-blog ${pkgdir}/etc/gconf/schemas/*.schemas
   rm -f "${pkgdir}/etc/gconf/schemas/"*.schemas
 }
