upgpkg: gnome-blog 0.9.2-4 Move some optdepends to depends, depend on splitted gnome-python-extras libraries
git-svn-id: file:///srv/repos/svn-packages/svn@106717 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gnome-blog/trunk/PKGBUILD
+++ b/gnome-blog/trunk/PKGBUILD
@@ -8,12 +8,9 @@ pkgrel=4
 pkgdesc="A gnome application that allows you to post entries to many different blog formats."
 arch=('any')
 license=('GPL')
-depends=('python2-gconf' 'python2-libgnome')
+depends=('python2-gconf' 'python2-libgnome' 'python2-gtkspell' 'python-gdata')
 makedepends=('intltool' 'desktop-file-utils' 'gnome-python')
-optdepends=('python-gnomeapplet: GNOME panel applet'
-            'python-gdata: Blogger.com support'
-            'gnome-python-extras: Spell checker'
-            'gtkspell: Spell checker')
+optdepends=('python-gnomeapplet: GNOME panel applet')
 install=gnome-blog.install
 url="http://www.gnome.org/~seth/gnome-blog/"
 source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/0.9/${pkgname}-${pkgver}.tar.bz2)
@@ -23,7 +20,7 @@ build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   find . -type f | xargs sed -i 's@^#!.*python$@#!/usr/bin/python2@'
   rm -f GNOME_BlogApplet.server.in
-  ./configure --prefix=/usr --sysconfdir=/etc \
+  PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
     --libexecdir=/usr/lib/gnome-blog \
     --localstatedir=/var
   make
