upgpkg: gnome-blog 0.9.2-5 Fix dependencies
git-svn-id: file:///srv/repos/svn-packages/svn@106727 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gnome-blog/trunk/PKGBUILD
+++ b/gnome-blog/trunk/PKGBUILD
@@ -4,11 +4,11 @@
 
 pkgname=gnome-blog
 pkgver=0.9.2
-pkgrel=4
+pkgrel=5
 pkgdesc="A gnome application that allows you to post entries to many different blog formats."
 arch=('any')
 license=('GPL')
-depends=('python2-gconf' 'python2-libgnome' 'python2-gtkspell' 'python-gdata')
+depends=('python2-gconf' 'python2-libgnome' 'python2-gtkspell' 'python-gdata' 'python2-gnomevfs' 'python2-bonobo' 'python2-gnomecanvas')
 makedepends=('intltool' 'desktop-file-utils' 'gnome-python')
 optdepends=('python-gnomeapplet: GNOME panel applet')
 install=gnome-blog.install
