--- a/deskbar-applet/trunk/PKGBUILD
+++ b/deskbar-applet/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 
 pkgname=deskbar-applet
 pkgver=2.32.0
-pkgrel=3
+pkgrel=4
 pkgdesc="An all-in-one search bar for the GNOME panel"
 arch=(i686 x86_64)
 url="http://raphael.slinckx.net/deskbar/"
 license=('GPL')
-depends=('gnome-desktop>=2.32.0' 'gnome-python>=2.28' 'python-gnomedesktop>=2.32' 'python-gnomekeyring>=2.32' 'python-wnck>=2.32' 'python-gnomeapplet>=2.32' 'gnome-panel-bonobo>=2.32.0' 'dbus-python>=0.83.0')
-makedepends=('evolution-data-server>=2.32.0' 'gettext' 'intltool' 'pkg-config' 'gnome-doc-utils>=0.20.1' 'gnome-python-desktop>=2.32.0')
+depends=('python-gnomekeyring' 'python-gnomeapplet' 'dbus-python' 'python-gnomedesktop' 'python-wnck' 'python2-gconf')
+makedepends=('evolution-data-server' 'intltool' 'gnome-doc-utils')
 options=('!libtool' '!emptydirs')
 groups=('gnome-extra')
 install=deskbar-applet.install
