--- a/system-config-printer/trunk/PKGBUILD
+++ b/system-config-printer/trunk/PKGBUILD
@@ -4,15 +4,15 @@
 pkgbase=system-config-printer
 pkgname=('system-config-printer-common'
 	'system-config-printer-gnome')
-pkgver=1.2.5
-pkgrel=5
+pkgver=1.2.6
+pkgrel=1
 pkgdesc="A CUPS printer configuration tool and status applet"
 url="http://cyberelk.net/tim/software/system-config-printer/"
 arch=('any')
 license=('GPL')
 makedepends=('intltool' 'python2' 'xmlto' 'docbook-xsl' 'desktop-file-utils' 'libcups' 'libxml2')
 source=("http://cyberelk.net/tim/data/${pkgbase}/1.2/${pkgbase}-${pkgver}.tar.bz2")
-md5sums=('71c01b73c458033795b218c4779f9811')
+md5sums=('ba4ae339dac1025cb014918286fd029b')
 
 build() {
   cd ${srcdir}/${pkgbase}-${pkgver}
@@ -74,8 +74,8 @@ package_system-config-printer-common() {
 
 package_system-config-printer-gnome() {
   pkgdesc='A CUPS printer configuration tool and status applet - GTK frontend'
-  depends=('system-config-printer-common' 'gnome-icon-theme' 'pygobject'
-    'pygtk' 'libxml2' 'python-notify' 'gnome-keyring')
+  depends=('system-config-printer-common' 'gnome-icon-theme' 'python-notify')
+  optdependence=('gnome-keyring: password management')
 
   cd ${srcdir}/${pkgbase}-${pkgver}
   make DESTDIR="${pkgdir}" install
