--- a/python2-sip/trunk/PKGBUILD
+++ b/python2-sip/trunk/PKGBUILD
@@ -5,15 +5,12 @@
 
 pkgname=python2-sip
 pkgver=4.12
-pkgrel=1
-pkgdesc="A tool that makes it easy to create Python bindings for C and C++ libraries"
+pkgrel=2
+pkgdesc="A tool that makes it easy to create Python 2 bindings for C and C++ libraries"
 arch=('i686' 'x86_64')
 url="http://www.riverbankcomputing.com/software/sip/"
 license=('custom:"sip"')
-depends=('python2' 'gcc-libs')
-provides=("sip=${pkgver}")
-replaces=('sip')
-conflicts=('sip')
+depends=('sip' 'python2')
 source=("http://www.riverbankcomputing.com/static/Downloads/sip4/sip-${pkgver}.tar.gz")
 md5sums=('8a0998fbaf34bdab2c15af3d4fa3bc0e')
 
@@ -28,5 +25,6 @@ package() {
   cd ${srcdir}/sip-${pkgver}
   make DESTDIR=${pkgdir} install
 
-  install -Dm644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
+  # Provided by sip package
+  rm ${pkgdir}/usr/bin/sip
 }
