--- a/python2-qt/trunk/PKGBUILD
+++ b/python2-qt/trunk/PKGBUILD
@@ -5,8 +5,8 @@
 
 pkgname=python2-qt
 pkgver=4.8.2
-pkgrel=1
-pkgdesc="A set of Python bindings for the Qt toolkit"
+pkgrel=2
+pkgdesc="A set of Python 2 bindings for the Qt toolkit"
 arch=('i686' 'x86_64')
 url="http://riverbankcomputing.co.uk/software/pyqt/intro"
 license=('GPL')
@@ -14,11 +14,8 @@ depends=('python2-sip' 'qt' 'dbus-python')
 makedepends=('phonon' 'python-opengl' 'qt-assistant-compat')
 optdepends=('phonon: enable audio and video in PyQt applications'
 	'python-opengl: enable OpenGL 3D graphics in PyQt applications'
-	'qscintilla: QScintilla API'
+	'python2-qscintilla: QScintilla API'
 	'qt-assistant-compat: add PyQt online help in Qt Assistant')
-provides=('pyqt4' "pyqt=${pkgver}")
-replaces=('pyqt4' 'pyqt')
-conflicts=('pyqt4' 'pyqt')
 source=("http://riverbankcomputing.co.uk/static/Downloads/PyQt4/PyQt-x11-gpl-${pkgver}.tar.gz"
         'fix-stackedwidget-bug.patch')
 md5sums=('142a32f126f205a2bd77f6a9910f5333'
@@ -45,4 +42,9 @@ package(){
   cd ${srcdir}/PyQt-x11-gpl-${pkgver}
   # INSTALL_ROOT is needed for the QtDesigner module, the other Makefiles use DESTDIR
   make DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
+
+  # Provided by pyqt
+  rm ${pkgdir}/usr/bin/{pylupdate4,pyrcc4,pyuic4}
+  rm ${pkgdir}/usr/lib/qt/plugins/designer/libpythonplugin.so
+  rm ${pkgdir}/usr/share/qt/qsci/api/python/PyQt4.api
 }
