upgpkg: binutils 2.21-3 glibc toolchain rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@106767 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/binutils/trunk/PKGBUILD
+++ b/binutils/trunk/PKGBUILD
@@ -5,14 +5,14 @@
 
 pkgname=binutils
 pkgver=2.21
-pkgrel=2
+pkgrel=3
 _date=20101216
 pkgdesc="A set of programs to assemble and manipulate binary and object files"
 arch=('i686' 'x86_64')
 url="http://www.gnu.org/software/binutils/"
 license=('GPL')
 groups=('base')
-depends=('glibc>=2.12.1-5' 'zlib')
+depends=('glibc>=2.13' 'zlib')
 makedepends=('dejagnu')
 options=('!libtool' '!distcc' '!ccache')
 install=binutils.install
