--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,14 +5,14 @@
 
 pkgname=binutils
 pkgver=2.21
-pkgrel=2
+pkgrel=3
 _date=20101216
 pkgdesc="A set of programs to assemble and manipulate binary and object files"
 arch=('i686' 'x86_64')
 url="http://www.gnu.org/software/binutils/"
 license=('GPL')
 groups=('base')
-depends=('glibc>=2.12.1-5' 'zlib')
+depends=('glibc>=2.13' 'zlib')
 makedepends=('dejagnu')
 options=('!libtool' '!distcc' '!ccache')
 install=binutils.install
