--- a/file/trunk/PKGBUILD
+++ b/file/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=file
-pkgver=5.04
-pkgrel=3
+pkgver=5.05
+pkgrel=1
 pkgdesc="File type identification utility"
 arch=('i686' 'x86_64')
 license=('custom')
@@ -13,20 +13,16 @@ url="http://www.darwinsys.com/file/"
 depends=('glibc' 'zlib')
 options=('!libtool')
 source=(ftp://ftp.astron.com/pub/${pkgname}/${pkgname}-${pkgver}.tar.gz 
-        file-5.04-python-2.7.patch
-        file-5.04-zip64.patch)
-md5sums=('accade81ff1cc774904b47c72c8aeea0' 
-         '4f223a3ff4f157320f1e6faffc4afb88'
-         'b547eb3430adb3deb756d3a43dd7ad46')
+        file-5.05-zip64.patch)
+md5sums=('0b429063710457be2bd17a18389cb018'
+         '385f020467debd98bd2d8df6143f93d0')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   sed -i 's#\$(datadir)/misc#\$(datadir)#' configure 
 
-  # identify python 2.7 byte-compiled files
-  patch -Np1 -i ../file-5.04-python-2.7.patch
   # identify zip64 files
-  patch -Np1 -i ../file-5.04-zip64.patch
+  patch -Np1 -i ${srcdir}/file-5.05-zip64.patch
 
   ./configure --prefix=/usr --datadir=/usr/share/file
   make 
