--- a/libjpeg/trunk/PKGBUILD
+++ b/libjpeg/trunk/PKGBUILD
@@ -3,8 +3,9 @@
 # Contributor: Judd Vinet <jvinet@zeroflux.org>
 
 pkgname=libjpeg
-pkgver=8.0.2
-_pkgver=8b
+# pkgver follows the library soname to avoid issues with version comparisons
+pkgver=8.3.0
+_pkgver=8c
 pkgrel=1
 pkgdesc="Library of JPEG support functions"
 arch=('i686' 'x86_64')
@@ -14,12 +15,16 @@ depends=('glibc')
 makedepends=('libtool')
 options=('!libtool')
 source=(http://www.ijg.org/files/jpegsrc.v${_pkgver}.tar.gz)
-md5sums=('e022acbc5b36cd2cb70785f5b575661e')
+md5sums=('a2c10c04f396a9ce72894beb18b4e1f9')
 
 build() {
   cd $srcdir/jpeg-${_pkgver}
   ./configure --prefix=/usr --enable-shared --enable-static
-  make || return 1
+  make
+}
+
+package() {
+  cd $srcdir/jpeg-${_pkgver}
   make prefix=$pkgdir/usr mandir=$pkgdir/usr/share/man install
   
   # See FS#11116 - re-assess current need sometime...
