--- a/dmxproto/trunk/PKGBUILD
+++ b/dmxproto/trunk/PKGBUILD
@@ -2,20 +2,21 @@
 #Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=dmxproto
-pkgver=2.3
+pkgver=2.3.1
 pkgrel=1
 pkgdesc="X11 Distributed Multihead X extension wire protocol"
 arch=(any)
+makedepends=('xorg-util-macros')
 url="http://xorg.freedesktop.org/"
 license=('custom')
 source=(${url}/releases/individual/proto/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('880a41720b2937e2660dcdc0d34a8791')
+sha1sums=('3b8b273b8ef3d8dbab998df9ec1dddf99edf4d91')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure --prefix=/usr || return 1
+  ./configure --prefix=/usr
   make || return 1
-  make DESTDIR="${pkgdir}" install || return 1
+  make DESTDIR="${pkgdir}" install
 
   install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
   install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/" || return 1
