--- a/xf86vidmodeproto/trunk/PKGBUILD
+++ b/xf86vidmodeproto/trunk/PKGBUILD
@@ -2,20 +2,22 @@
 #Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=xf86vidmodeproto
-pkgver=2.3
+pkgver=2.3.1
 pkgrel=1
 pkgdesc="X11 Video Mode extension wire protocol"
 arch=(any)
 url="http://xorg.freedesktop.org/"
 license=('custom')
+makedepends=('xorg-util-macros')
 source=(${url}/releases/individual/proto/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('4434894fc7d4eeb4a22e6b876d56fdaa')
+sha1sums=('11d54c3210887631ea71e8f8030a77692e964fc4')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure --prefix=/usr || return 1
-  make || return 1
-  make DESTDIR="${pkgdir}" install || return 1
+  ./configure --prefix=/usr
+  make
+  make DESTDIR="${pkgdir}" install
+
   install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
-  install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/" || return 1
+  install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/"
 }
