--- a/kdeadmin/trunk/PKGBUILD
+++ b/kdeadmin/trunk/PKGBUILD
@@ -8,13 +8,13 @@ pkgname=('kdeadmin-kcron'
          'kdeadmin-kuser'
          'kdeadmin-system-config-printer-kde')
 pkgver=4.5.5
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdeadmin')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebindings-python'
-	'system-config-printer-common' 'pyqt' 'docbook-xsl')
+	'system-config-printer-common' 'python2-qt' 'docbook-xsl')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
 	'syslog-path.patch')
 sha1sums=('798dcc0e572315dc5db8afa2e6c467293cbf5d98'
@@ -70,7 +70,7 @@ package_kdeadmin-kuser() {
 
 package_kdeadmin-system-config-printer-kde() {
 	pkgdesc='Configure local and remote Printers'
-	depends=('kdebindings-python' 'system-config-printer-common' 'pyqt')
+	depends=('kdebindings-python' 'system-config-printer-common' 'python2-qt')
 	url="http://kde.org/applications/system/printerapplet/"
 	cd $srcdir/build/system-config-printer-kde
 	make DESTDIR=$pkgdir install
