--- a/xineramaproto/trunk/PKGBUILD
+++ b/xineramaproto/trunk/PKGBUILD
@@ -2,20 +2,22 @@
 #Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=xineramaproto
-pkgver=1.2
+pkgver=1.2.1
 pkgrel=1
 pkgdesc="X11 Xinerama extension wire protocol"
 arch=(any)
 url="http://xorg.freedesktop.org/"
 license=('custom')
+makedepends=('xorg-util-macros')
 source=(${url}/releases/individual/proto/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('a8aadcb281b9c11a91303e24cdea45f5')
+sha1sums=('818bffc16139d6e3de4344c83f00c495d3536753')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure --prefix=/usr || return 1
-  make || return 1
-  make DESTDIR="${pkgdir}" install || return 1
+  ./configure --prefix=/usr
+  make
+  make DESTDIR="${pkgdir}" install
+
   install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
-  install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/" || return 1
+  install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/"
 }
