upgpkg: libx11 1.4.1-1 Update to 1.4.1
git-svn-id: file:///srv/repos/svn-packages/svn@106847 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libx11/trunk/PKGBUILD
+++ b/libx11/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libx11
-pkgver=1.4.0
+pkgver=1.4.1
 pkgrel=1
 pkgdesc="X11 client-side library"
 arch=(i686 x86_64)
@@ -10,10 +10,10 @@ url="http://xorg.freedesktop.org/"
 depends=('libxcb' 'xproto' 'kbproto')
 makedepends=('xorg-util-macros' 'xextproto' 'xtrans' 'inputproto')
 options=('!libtool')
-license=('custom:XFREE86')
+license=('custom')
 source=(${url}/releases/individual/lib/libX11-${pkgver}.tar.bz2
         xorg.sh)
-sha1sums=('3d198f5578733d6c3d81c005025875f6d084668e'
+sha1sums=('83590cdac5071b7154b223d73655edcfc82095c1'
           '4b756387426afb2a5bb7a155631ec42348abf5c1')
 
 build() {
