--- a/hplip/trunk/PKGBUILD
+++ b/hplip/trunk/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=hplip
 pkgver=3.10.9
-pkgrel=1
-pkgdesc="Drivers for HP DeskJet, OfficeJet, Photosmart, Business Inkjet and some LaserJet."
+pkgrel=2
+pkgdesc="Drivers for HP DeskJet, OfficeJet, Photosmart, Business Inkjet and some LaserJet"
 arch=('i686' 'x86_64')
 url="http://hplipopensource.com"
 license=('GPL')
-makedepends=('pyqt' 'pygobject' 'pkgconfig' 'sane' 'rpcbind' 'dbus-python' 'cups')
+makedepends=('python2-qt' 'pygobject' 'pkgconfig' 'sane' 'rpcbind' 'cups')
 depends=('python2' 'ghostscript>=8.64-6' 'foomatic-db' 'foomatic-db-engine'
 	'libcups>=1.3.10-3' 'net-snmp>=5.5')
 replaces=('hpijs')
@@ -20,7 +20,7 @@ optdepends=('cups: for printing support'
             'dbus-python: for dbus support'
             'sane: for scanner support'
             'rpcbind: for network support'
-            'pyqt: for running hp-toolbox'
+            'python2-qt: for running hp-toolbox'
             'pygobject: for running hp-toolbox')
 
 build() {
@@ -39,6 +39,7 @@ build() {
 
  make
 }
+
 package() {
  cd $srcdir/$pkgname-$pkgver
  make DESTDIR=$pkgdir/ install
@@ -51,8 +52,8 @@ package() {
  mv $pkgdir/etc/udev/rules.d/* $pkgdir/lib/udev/rules.d/
  rm -r $pkgdir/etc/udev
  # remove lp user, it's not used on archlinux
- sed -i 's|OWNER="lp", ||g' $pkgdir/lib/udev/rules.d/40-hplip.rules || return 1
+ sed -i 's|OWNER="lp", ||g' $pkgdir/lib/udev/rules.d/40-hplip.rules
  # fix sysfs rules
- sed -i -e "s|SYSFS|ATTRS|g" -e "s|sysfs|attrs|g" $pkgdir/lib/udev/rules.d/56-hpmud_support.rules || return 1
+ sed -i -e "s|SYSFS|ATTRS|g" -e "s|sysfs|attrs|g" $pkgdir/lib/udev/rules.d/56-hpmud_support.rules
 }
 md5sums=('609718830a26874fc0ea84a47b8132f3')
