--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,8 +1,9 @@
 # $Id$
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 # Contributor: Alexander Baldeck <alexander@archlinux.org>
+
 pkgname=pixman
-pkgver=0.20.0
+pkgver=0.20.2
 pkgrel=1
 pkgdesc="Pixman library"
 arch=(i686 x86_64)
@@ -11,12 +12,13 @@ license=('custom')
 depends=('glibc')
 options=('!libtool')
 source=(http://xorg.freedesktop.org/releases/individual/lib/${pkgname}-${pkgver}.tar.bz2)
-sha1sums=('2d9e3416f8bcf561a85c381a568d23fd53e0e922')
+sha1sums=('9972c8f8ce484f7649d9f588168cd29f61c05c63')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --disable-static
   make
+  make check
   make DESTDIR="${pkgdir}" install
   install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
   install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/"
