--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,24 +2,24 @@
 #Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libxp
-pkgver=1.0.0
-pkgrel=3
+pkgver=1.0.1
+pkgrel=1
 pkgdesc="X11 X Print Library"
 arch=('i686' 'x86_64')
 license=('custom')
 url="http://xorg.freedesktop.org/"
 depends=('libxext' 'printproto')
-makedepends=('pkgconfig')
+makedepends=('xorg-util-macros')
 options=('!libtool')
 source=(${url}/releases/individual/lib/libXp-${pkgver}.tar.bz2)
 license=('custom')
-md5sums=('0f4ac39108c1ae8c443cdfac259b58fa')
+sha1sums=('9c76823c7cfcb43f097963d0c930dcc4e38807a8')
 
 build() {
   cd "${srcdir}/libXp-${pkgver}"
-  ./configure --prefix=/usr --mandir=/usr/share/man || return 1
-  make || return 1
-  make DESTDIR="${pkgdir}" install || return 1
+  ./configure --prefix=/usr
+  make
+  make DESTDIR="${pkgdir}"
   install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
-  install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/" || return 1
+  install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/"
 }
