--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,9 +3,9 @@
 # Maintainer: Paul Mattal <paul@archlinux.org>
 pkgname=postfix
 pkgver=2.7.2
-pkgrel=1
-pkgdesc="Secure, fast, easy to administer drop in replacement for Sendmail (MTA)"
-url="http://www.postfix.org/"
+pkgrel=2
+pkgdesc='Secure, fast, easy to administer drop in replacement for Sendmail (MTA)'
+url='http://www.postfix.org/'
 arch=('i686' 'x86_64')
 license=('custom')
 depends=('pcre' 'libsasl' 'libmysqlclient' 'postgresql-libs>=8.4' 'libldap>=2.4' 'db')
