--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=libxp
 pkgver=1.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="X11 X Print Library"
 arch=('i686' 'x86_64')
 license=('custom')
@@ -19,7 +19,7 @@ build() {
   cd "${srcdir}/libXp-${pkgver}"
   ./configure --prefix=/usr
   make
-  make DESTDIR="${pkgdir}"
+  make DESTDIR="${pkgdir}" install
   install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
   install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/"
 }
