upgpkg: libxp 1.0.1-2 really install files. FS#22511
git-svn-id: file:///srv/repos/svn-packages/svn@106876 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libxp/trunk/PKGBUILD
+++ b/libxp/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=libxp
 pkgver=1.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="X11 X Print Library"
 arch=('i686' 'x86_64')
 license=('custom')
@@ -19,7 +19,7 @@ build() {
   cd "${srcdir}/libXp-${pkgver}"
   ./configure --prefix=/usr
   make
-  make DESTDIR="${pkgdir}"
+  make DESTDIR="${pkgdir}" install
   install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
   install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/"
 }
