upgpkg: qscintilla 2.4.6-3 add qscintilla python 3 library; split out python 2 library in a new package and install common files into the qscintilla package
git-svn-id: file:///srv/repos/svn-packages/svn@106881 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/qscintilla/trunk/PKGBUILD
+++ b/qscintilla/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 # Contributor: Douglas Soares de Andrade <dsa@aur.archlinux.org>
 
 pkgbase=qscintilla
-pkgname=('qscintilla' 'python2-qscintilla')
+pkgname=('qscintilla' 'python-qscintilla')
 pkgver=2.4.6
-pkgrel=2
+pkgrel=3
 license=('GPL')
 arch=('i686' 'x86_64')
 url="http://www.riverbankcomputing.co.uk/software/qscintilla/intro"
-makedepends=('python2-qt')
+makedepends=('python-qt')
 source=("http://riverbankcomputing.com/static/Downloads/QScintilla2/QScintilla-gpl-${pkgver}.tar.gz"
         'configure.py-objdir-support.diff')
 md5sums=('424a89736b900e6ca5bc6d929cdafaf8'
@@ -29,15 +29,12 @@ build() {
     make
 
     cd ../Python
-    python2 configure.py -n ../Qt4/ -o ../Qt4 -c -p 4
+    python configure.py -n ../Qt4/ -o ../Qt4 -c -p 4
     make
 }
 
 package_qscintilla() {
     pkgdesc="A port to Qt4 of Neil Hodgson's Scintilla C++ editor class"
-    provides=('qscintilla2')
-    conflicts=('qscintilla2')
-    replaces=('qscintilla2')
     depends=('qt')
 
     cd ${srcdir}/QScintilla-gpl-${pkgver}/Qt4
@@ -45,15 +42,16 @@ package_qscintilla() {
 
     cd ${srcdir}/QScintilla-gpl-${pkgver}/designer-Qt4
     make DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
+    
+    cd ${srcdir}/QScintilla-gpl-${pkgver}/Python
+    make DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
 }
 
-package_python2-qscintilla() {
-    pkgdesc="Python bindings for QScintilla2"
-    provides=("python-qscintilla=${pkgver}")
-    conflicts=('python-qscintilla2' 'python-qscintilla')
-    replaces=('python-qscintilla2' 'python-qscintilla')
-    depends=('qscintilla' 'python2-qt')
+package_python-qscintilla() {
+    pkgdesc="Python 3 bindings for QScintilla2"
+    depends=('qscintilla' 'python-qt')
 
     cd "${srcdir}/QScintilla-gpl-${pkgver}/Python"
-    make DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
+    install -Dm755 Qsci.so \
+      ${pkgdir}/usr/lib/python3.1/site-packages/PyQt4/Qsci.so
 }
