upgpkg: kdebindings 4.5.5-2 fix to depends on python2-qt
git-svn-id: file:///srv/repos/svn-packages/svn@106889 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdebindings/trunk/PKGBUILD
+++ b/kdebindings/trunk/PKGBUILD
@@ -8,11 +8,11 @@ pkgname=('kdebindings-csharp'
          'kdebindings-ruby'
          'kdebindings-smoke')
 pkgver=4.5.5
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL')
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'pyqt' 'kdepim-runtime' 'mono'
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'python2-qt' 'kdepim-runtime' 'mono'
 	'kdegraphics-okular' 'qwt' 'docbook-xsl' 'boost' 'qscintilla' 'ruby')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
         'sip4.11.2.patch'
@@ -58,7 +58,7 @@ package_kdebindings-csharp() {
 
 package_kdebindings-python() {
 	pkgdesc='KDE bindings for python'
-	depends=('kdepim-runtime' 'pyqt' 'qscintilla')
+	depends=('kdepim-runtime' 'python2-qt' 'qscintilla')
 	cd $srcdir/build/python
 	make DESTDIR=$pkgdir install
 
