--- a/xfce4-cpugraph-plugin/trunk/PKGBUILD
+++ b/xfce4-cpugraph-plugin/trunk/PKGBUILD
@@ -4,11 +4,11 @@
 
 pkgname=xfce4-cpugraph-plugin
 pkgver=1.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="CPU graph plugin for the Xfce4 panel"
 arch=('i686' 'x86_64')
-license=('custom')
-url="http://xfce-goodies.berlios.de/"
+license=('GPL' 'custom')
+url="http://goodies.xfce.org/projects/panel-plugins/xfce4-cpugraph-plugin"
 groups=('xfce4-goodies')
 depends=('xfce4-panel' 'libxfcegui4' 'hicolor-icon-theme')
 makedepends=('intltool')
