upgpkg: xfce4-cpugraph-plugin 1.0.1-2 fix license and url; #21158
git-svn-id: file:///srv/repos/svn-packages/svn@106953 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,11 +4,11 @@
 
 pkgname=xfce4-cpugraph-plugin
 pkgver=1.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="CPU graph plugin for the Xfce4 panel"
 arch=('i686' 'x86_64')
-license=('custom')
-url="http://xfce-goodies.berlios.de/"
+license=('GPL' 'custom')
+url="http://goodies.xfce.org/projects/panel-plugins/xfce4-cpugraph-plugin"
 groups=('xfce4-goodies')
 depends=('xfce4-panel' 'libxfcegui4' 'hicolor-icon-theme')
 makedepends=('intltool')
