--- a/xfce4-weather-plugin/trunk/PKGBUILD
+++ b/xfce4-weather-plugin/trunk/PKGBUILD
@@ -4,14 +4,14 @@
 
 pkgname=xfce4-weather-plugin
 pkgver=0.7.3
-pkgrel=1
+pkgrel=2
 pkgdesc="A weather plugin for the Xfce4 panel"
 arch=(i686 x86_64)
 license=('GPL2')
 url="http://xfce-goodies.berlios.de/"
 groups=('xfce4-goodies')
-depends=('xfce4-panel' 'libxml2' 'hicolor-icon-theme')
-makedepends=('pkgconfig')
+depends=('xfce4-panel>=4.8.0' 'libxfcegui4' 'libxml2' 'hicolor-icon-theme')
+makedepends=('intltool')
 options=('!libtool')
 install=${pkgname}.install
 source=( http://archive.xfce.org/src/panel-plugins/${pkgname}/0.7/${pkgname}-${pkgver}.tar.bz2)
@@ -19,8 +19,16 @@ md5sums=('b3436929dd94cdd8acc744c474cca5c4')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib \
-    --localstatedir=/var --disable-static
-  make || return 1
-  make DESTDIR=${pkgdir} install || return 1
+  ./configure --prefix=/usr \
+	--sysconfdir=/etc \
+	--libexecdir=/usr/lib \
+	--localstatedir=/var \
+	--disable-static \
+	--disable-debug
+  make
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
+  make DESTDIR=${pkgdir} install
 }
