upgpkg: qscintilla 2.4.6-4 fix conlicts (FS#22514)
git-svn-id: file:///srv/repos/svn-packages/svn@106969 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/qscintilla/trunk/PKGBUILD
+++ b/qscintilla/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=qscintilla
 pkgname=('qscintilla' 'python-qscintilla')
 pkgver=2.4.6
-pkgrel=3
+pkgrel=4
 license=('GPL')
 arch=('i686' 'x86_64')
 url="http://www.riverbankcomputing.co.uk/software/qscintilla/intro"
@@ -45,6 +45,9 @@ package_qscintilla() {
     
     cd ${srcdir}/QScintilla-gpl-${pkgver}/Python
     make DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
+
+    # Provided by python-qscintilla
+    rm ${pkgdir}/usr/lib/python3.1/site-packages/PyQt4/Qsci.so
 }
 
 package_python-qscintilla() {
