upgpkg: koffice 2.3.1-1 update to 2.3.1
git-svn-id: file:///srv/repos/svn-packages/svn@106974 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/koffice/trunk/PKGBUILD
+++ b/koffice/trunk/PKGBUILD
@@ -1,5 +1,5 @@
-# $Id$
 # Maintainer: Ronald van Haren <ronald.archlinux.org>
+# Contributor: BlackEagle < ike DOT devolder AT gmail DOT com >
 
 pkgbase=koffice
 pkgname=(
@@ -34,7 +34,7 @@ pkgname=(
 	'koffice-thesaurus-doc'
 #	'koffice-kdgantt' # still an empty package
 )
-pkgver=2.3.0
+pkgver=2.3.1
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://koffice.kde.org'
@@ -43,38 +43,15 @@ makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'eigen' \
   'kdelibs' 'gsl' 'qca' 'lcms' 'glew' 'qimageblitz' \
   'kdepimlibs' 'pstoedit' 'poppler-qt' 'libwpd' 'libwpg' 'openexr' 'opengtl' 'kdegraphics-libs' 'sqlite3' 'docbook-xml' 'docbook-xsl')
 groups=('koffice')
-source=("http://download.kde.org/stable/${pkgbase}-${pkgver}/${pkgbase}-${pkgver}.tar.bz2"
-	"wordperfect.patch")
-#	"01_kpresenter.patch"
-#	"02_kspreadpatch.patch"
-#	"03_iconv.patch"
-#	"04_kwordascii.patch"
-#	"05_filter_excel.patch"
-#	"06_headers.patch"
-#	"10_nokcharpart.patch"
-#	"16_kformula_kdeinit4.patch")
-sha256sums=('a8e9a3ed882536cc4ca59388cc82268478339d328b62daaaec1a7bc970b73e1c'
-            '2116ee234a11d23e47a09d2863795488895c1b265421ecfec3c6f903adb38c5f'
-            'ebe834d39e6d7701d8c59694328736c4b6223ae5629a81a9e07c516388203749'
-            'bba3e8be1cfe18559dd0210887bbfb008d97d0266b160499f43d2f7860feaa42'
-            '976bc94157571357636b2029ebe5c08cd8ee7a34aea1defc046e108e255bac84'
-            'f36194350b228f5303ee4e136f1476ec6bf217d4c76e9a04732b0c2dd4c913d8'
-            '246f1b032646b17c48e1c35da4ace513b8a9a3646b68e973da5921386fd8b7c7'
-            '9a23a933caf76094d1602f7408c27f24d51515af31238c6eb8798385cd3a1656'
-            'a6f7d57c8d9740eba3267ed816271394f95091d960e69d407bc84396df5f9675')
+source=("ftp://ftp.kde.org/pub/kde/stable/${pkgbase}-${pkgver}/${pkgbase}-${pkgver}.tar.bz2"
+	"kde4-koffice-libwpg02.patch")
+sha256sums=('e73da38cfbfb2c6b7170767065addc0de38725e82c4fa49c76bcf375ee44f143'
+            '69106deb4081d71b5bd8f2e4f5af67ca689e4ce9f2bb49c11dbce5fb3409d612')
 	
 build() {
 	cd ${srcdir}/${pkgbase}-${pkgver}
 
-	patch -Np1 -i ${srcdir}/wordperfect.patch
-#	patch -Np1 -i ${srcdir}/01_kpresenter.patch
-#	patch -Np1 -i ${srcdir}/02_kspreadpatch.patch
-#	patch -Np1 -i ${srcdir}/03_iconv.patch
-#	patch -Np1 -i ${srcdir}/04_kwordascii.patch
-#	patch -Np1 -i ${srcdir}/05_filter_excel.patch
-#	patch -Np1 -i ${srcdir}/06_headers.patch
-#	patch -Np1 -i ${srcdir}/10_nokcharpart.patch
-#	patch -Np1 -i ${srcdir}/16_kformula_kdeinit4.patch
+	patch -Np1 -i ${srcdir}/kde4-koffice-libwpg02.patch
 
 	cd ${srcdir}
 	mkdir build
@@ -317,6 +294,3 @@ package_koffice-thesaurus-doc(){
 	cd ${srcdir}/build/doc/thesaurus
         make DESTDIR=${pkgdir} install
 }
-
-sha256sums=('a8e9a3ed882536cc4ca59388cc82268478339d328b62daaaec1a7bc970b73e1c'
-            '06a140b14a40d717c9128758139ff9e6b994b00fc96f183d3a60323c180dd898')
