--- a/kde-unstable/PKGBUILD
+++ b/kde-unstable/PKGBUILD
@@ -5,15 +5,15 @@
 pkgbase=oxygen-icons
 pkgname=('oxygen-icons'
          'oxygen-icons-svg')
-pkgver=4.5.95
+pkgver=4.6.0
 pkgrel=1
 pkgdesc="The Oxygen Icon Theme"
 arch=('any')
 url='http://www.oxygen-icons.org/'
 license=('LGPL')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
-source=("http://download.kde.org/unstable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-sha1sums=('f0ab38a07e7533cfc110e4622610416833ff28f0')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+sha1sums=('a5c9cdfd2ead610b3b7d763006802ee90afdb580')
 
 build() {
 	cd $srcdir
