--- a/kdegraphics/kde-unstable/PKGBUILD
+++ b/kdegraphics/kde-unstable/PKGBUILD
@@ -12,7 +12,7 @@ pkgname=('kdegraphics-gwenview'
          'kdegraphics-ksnapshot'
          'kdegraphics-libs'
          'kdegraphics-okular')
-pkgver=4.5.95
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -21,8 +21,8 @@ groups=('kde' 'kdegraphics')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'qimageblitz' 'sane' 'lcms'
         'libxxf86vm' 'poppler-qt' 'libspectre' 'chmlib' 'djvulibre'
         'ebook-tools' 'kdebase-runtime' 'docbook-xsl')
-source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('48975504cc2e46aa316b2e16256f96acc293343b')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
+sha1sums=('bef8ebfa33f66405975e4e1b5c327fa144c3e40e')
 
 build() {
 	cd ${srcdir}
