--- a/kdebindings/kde-unstable/PKGBUILD
+++ b/kdebindings/kde-unstable/PKGBUILD
@@ -7,15 +7,15 @@ pkgname=('kdebindings-csharp'
          'kdebindings-python'
          'kdebindings-ruby'
          'kdebindings-smoke')
-pkgver=4.5.95
-pkgrel=2
+pkgver=4.6.0
+pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'python2-qt' 'kdepim-runtime' 'mono'
 	'kdegraphics-okular' 'qwt' 'docbook-xsl' 'boost' 'qscintilla' 'ruby')
-source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('55ce512006f53b31c41675fabe4565b6e4eb4483')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
+sha1sums=('a2d641bbee7fddfbd76652fb41cd784d8c92288c')
 
 build() {
 	cd ${srcdir}/${pkgbase}-${pkgver}
