--- a/kdeadmin/kde-unstable/PKGBUILD
+++ b/kdeadmin/kde-unstable/PKGBUILD
@@ -7,17 +7,17 @@ pkgname=('kdeadmin-kcron'
          'kdeadmin-ksystemlog'
          'kdeadmin-kuser'
          'kdeadmin-system-config-printer-kde')
-pkgver=4.5.95
-pkgrel=2
+pkgver=4.6.0
+pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdeadmin')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebindings-python'
 	    'system-config-printer-common' 'python2-qt' 'docbook-xsl')
-source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
         'syslog-path.patch')
-sha1sums=('d5c9bb6fd00f0b3799a5eed5c249a14edf4d2d31'
+sha1sums=('a52d35e8479744d19e04c46c1844ebd27bfb5fb0'
           '96988f1eb531efae56d32a2471bd8ef5329ca749')
 
 build() {
