--- a/kdemultimedia/kde-unstable/PKGBUILD
+++ b/kdemultimedia/kde-unstable/PKGBUILD
@@ -10,7 +10,7 @@ pkgname=('kdemultimedia-dragonplayer'
          'kdemultimedia-kmix'
          'kdemultimedia-kscd'
          'kdemultimedia-mplayerthumbs')
-pkgver=4.5.95
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -18,9 +18,9 @@ license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdemultimedia')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime' 'tunepimp'
         'ffmpeg' 'mplayer' 'docbook-xsl' 'pulseaudio' 'libmusicbrainz3')
-source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
         'mplayerthumbs.config')
-sha1sums=('e9f8d71a17f626964295e6e5185f3efac197dc40'
+sha1sums=('704b5bc12c5d3c64809824b433dabeb101008825'
           'ba016fa2563c14ffcba852c62506b66bfc6ee683')
 
 build() {
