--- a/kdenetwork/kde-unstable/PKGBUILD
+++ b/kdenetwork/kde-unstable/PKGBUILD
@@ -10,7 +10,7 @@ pkgname=('kdenetwork-filesharing'
          'kdenetwork-kppp'
          'kdenetwork-krdc'
          'kdenetwork-krfb')
-pkgver=4.5.95
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -20,8 +20,8 @@ makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'speex' 'ortp' 'libotr'
 	'qca-ossl' 'kdebase-workspace' 'kdebase-lib' 'libvncserver' 'libmsn'
 	'ppp' 'v4l-utils' 'libidn' 'rdesktop' 'qimageblitz' 'libxdamage' 'libgadu'
 	'telepathy-qt4' 'docbook-xsl' 'libktorrent' 'kwebkitpart')
-source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('67d7553a270f407012e5a21e5047f545cbde369d')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
+sha1sums=('c69dcc48c8fc4064e183136b6d85e6379978925f')
 
 build() {
     cd ${srcdir}
