--- a/kdesdk/kde-unstable/PKGBUILD
+++ b/kdesdk/kde-unstable/PKGBUILD
@@ -23,7 +23,7 @@ pkgname=('kdesdk-cervisia'
          'kdesdk-scripts'
          'kdesdk-strigi-analyzer'
          'kdesdk-umbrello')
-pkgver=4.5.95
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -31,16 +31,13 @@ license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdesdk')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'kdepim-runtime' 'subversion'
         'docbook-xsl' 'antlr2' 'kdebase-konqueror')
-source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
-        'fix-antlr2-executable.patch'
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
         'fix-python2-path.patch')
-sha1sums=('84075b3ac9d78345f28df0018d0d0b08b942411e'
-          'dc2caaa29bebb49b496bd12eec4e5718e9af0c8f'
+sha1sums=('af8d67b1823f72b759ac604a1be15d8ec91b2b2c'
           'd05ca0231869c484fd3861955d960a60aff7dcfb')
 
 build() {
 	cd ${srcdir}/${pkgbase}-${pkgver}
-	patch -Np1 -i ${srcdir}/fix-antlr2-executable.patch
 
 	# Fix python2 path
 	patch -Np1 -i ${srcdir}/fix-python2-path.patch
