--- a/kdetoys/kde-unstable/PKGBUILD
+++ b/kdetoys/kde-unstable/PKGBUILD
@@ -6,15 +6,15 @@ pkgbase=kdetoys
 pkgname=('kdetoys-amor'
          'kdetoys-kteatime'
          'kdetoys-ktux')
-pkgver=4.5.95
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdetoys')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-workspace' 'docbook-xsl')
-source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('6a8cc33f288ef0c3e17622feae589529d0116484')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
+sha1sums=('758f73eeb46f54ce21c6b50303b427fd2264e124')
 
 build() {
 	cd $srcdir
