--- a/kdeutils/kde-unstable/PKGBUILD
+++ b/kdeutils/kde-unstable/PKGBUILD
@@ -16,7 +16,7 @@ pkgname=('kdeutils-ark'
          'kdeutils-printer-applet'
          'kdeutils-superkaramba'
          'kdeutils-sweeper')
-pkgver=4.5.95
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -25,8 +25,8 @@ groups=('kde' 'kdeutils')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-lib' 'kdebase-workspace'
 	'kdebindings-python' 'system-config-printer-common' 'libarchive' 'qimageblitz'
 	'docbook-xsl' 'qjson')
-source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('3f6ca4d68edb62c1b38c774aff103bba111caa02')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
+sha1sums=('d63e7abd1e91d4d33b7d03525c90abb3e8a56383')
 
 build() {
 	cd ${srcdir}
