upgpkg: nvidia-utils 260.19.36-1 update to 260.19.36, add provides for libcl. FS#20558
git-svn-id: file:///srv/repos/svn-packages/svn@107160 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/nvidia-utils/trunk/PKGBUILD
+++ b/nvidia-utils/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: James Rayner <iphitus@gmail.com>
 
 pkgname=nvidia-utils
-pkgver=260.19.29
+pkgver=260.19.36
 pkgrel=1
 pkgdesc="NVIDIA drivers utilities and libraries."
 arch=('i686' 'x86_64')
@@ -11,7 +11,7 @@ url="http://www.nvidia.com/"
 depends=('xorg-server' 'libxvmc')
 optdepends=('gtk2: nvidia-settings' 'pkg-config: nvidia-xconfig')
 conflicts=('libgl')
-provides=('libgl')
+provides=('libgl' 'libcl')
 license=('custom')
 install=nvidia.install
 options=('!strip')
@@ -20,13 +20,13 @@ backup=('etc/X11/xorg.conf.d/20-nvidia.conf')
 if [ "$CARCH" = "i686" ]; then
 	_arch='x86'
 	_pkg="NVIDIA-Linux-${_arch}-${pkgver}"
-	source=("http://us.download.nvidia.com/XFree86/Linux-${_arch}/${pkgver}/${_pkg}.run")
-        md5sums=('e982a05a85c68130acfe1d48086250e3')
+	source=("ftp://download.nvidia.com/XFree86/Linux-${_arch}/${pkgver}/${_pkg}.run")
+        md5sums=('2826484d87827351774449382e45c4a9')
 elif [ "$CARCH" = "x86_64" ]; then
 	_arch='x86_64'
 	_pkg="NVIDIA-Linux-${_arch}-${pkgver}-no-compat32"
-	source=("http://us.download.nvidia.com/XFree86/Linux-${_arch}/${pkgver}/${_pkg}.run")
-        md5sums=('0583668d86f7318d99def3ed3e1cc4bc')
+	source=("ftp://download.nvidia.com/XFree86/Linux-${_arch}/${pkgver}/${_pkg}.run")
+        md5sums=('6ebc5db9066e920b0b0e48377ce5eeb5')
 fi
 
 source[1]='20-nvidia.conf'
